--- a/http2-client-grpc-example.cabal
+++ b/http2-client-grpc-example.cabal
@@ -16,7 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src, gen
   exposed-modules:     Lib
-                     , SimpleLib
+                     , GRPC
                      , Proto.Protos.Grpcbin
                      , Proto.Protos.Grpcbin_Fields
   build-depends:       base >= 4.7 && < 5
@@ -35,6 +35,10 @@ library
                      , tls
                      , process
                      , process-extras
+                     , http2-grpc-proto3-wire
+                     , microlens
+                     , text
+                     , proto3-wire
   default-language:    Haskell2010
 
 executable http2-client-grpc-example-exe
@@ -42,6 +46,7 @@ executable http2-client-grpc-example-exe
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
+                     , http2-client
                      , http2-client-grpc-example
                      , bytestring
                      , optparse-applicative
