--- a/stack.yaml
+++ b/stack.yaml
@@ -1,13 +1,19 @@
-resolver: lts-13.17
+resolver: lts-14.27
 packages:
 - .
 extra-deps:
 - http2-client-0.9.0.0
-- http2-client-grpc-0.7.0.0
-- http2-grpc-types-0.4.0.0
-- lens-labels-0.2.0.1
-- proto-lens-0.5.0.0
-- proto-lens-runtime-0.5.0.0
-- proto-lens-protoc-0.5.0.0
+- http2-client-grpc-0.8.0.0
+- http2-grpc-types-0.5.0.0
+- proto-lens-0.7.0.0
+- proto-lens-runtime-0.7.0.0
+- proto-lens-protoc-0.7.0.0
+- ghc-source-gen-0.4.0.0
+- http2-1.6.5
+- network-2.8.0.1
+- http2-grpc-proto3-wire-0.1.0.0
+- microlens-0.4.11.1
+- text-1.2.4.0
+- proto3-wire-1.0.0
 flags: {}
 extra-package-dbs: []
